basic structure is done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,11 @@
 <header>
-    <nav>
-        <img src="" alt="">
+    <nav class="menu">
+        <img class="logo" src="./images/adalab-logo.svg" alt="imagenlogo">
+        <ul>
+            <li class="nav-blog"><a href="">BLOG</a></li>
+            <li class="nav-contacto"><a href="">CONTACTO</a></li>
+        </ul>
     </nav>
-</header>
+    <header>
+        
+    </header>
