--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,8 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: "Rubik";
+
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$main-color: grey;
+$main-color: rgb(26, 194, 194);
+
