--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -1,6 +1,6 @@
-<body>
-    <div><img class="photolamp" src="../images/lamp.jpg" alt="lamp-image"></div>
-    <p>
-        CREANDO DIVERSIDAD DIGITAL
-    </p>
+<body class="container">
+    <div class="photo-lamp"><img src="../images/lamp.png" alt="">
+        <h1 class="text"></h1>
+        
+    </div>
 </body>
