--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,11 @@
 <header>
-    <nav class="menu">
+    <nav> 
         <img class="logo" src="./images/adalab-logo.svg" alt="imagenlogo">
-        <ul>
+
+        <ul class="menu">
             <li class="nav-blog"><a href="">BLOG</a></li>
             <li class="nav-contacto"><a href="">CONTACTO</a></li>
         </ul>
     </nav>
-    <header>
         
     </header>
