--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,6 +3,10 @@ $font-main: "Rubik";
 
 
 // colors
-$main-color: grey;
-$main-color: rgb(26, 194, 194);
+
+$main-color: teal;
+$main-color: #c5c5c5;
+$main-color: #252525;
+$main-color:black;
+
 
