--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -1,3 +1,14 @@
-.body{
-    display: flex;
+.container{
+    width: 100pz;
+}
+.text{
+    padding: 20%;
+    color: aliceblue;
+    font-size: 20px;
+    text-align: left;
+}
+.photo-lamp{
+    min-height:100vh;
+    width: 100%;
+
 }
