--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,4 @@
-<footer class="footer">
-    <p>Adalab © 2018</p>
+<footer class="container">
+    <span class="copyright">Adalab © 2018</span>
+    
 </footer>
