--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 
@@ -11,5 +12,10 @@ ul {
 
 a {
   text-decoration: none;
+
+}
+
+font {
+  font-family: Rubik;
 
 }
