--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,13 @@
-.footer{
-  background-color: black;
-  display: flex;
- color: aquamarine;
-}
+  .container{
+    width: 100%;
+  }
+    
+  .copyright{
+    background-color: black;
+    display: flex; justify-content: center;
+    color: #585c5b;
+    width: 100%;
+    height: 90px;
+    font-size: 20px;    
+  
+  }
