--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,3 +1,19 @@
-.header{
-  
+.image-logo{
+    display: flex;
+    width: 100%;
 }
+
+.menu li{
+    padding-left: 100px;
+    display: inline; 
+    font-size: 20px;    
+    color: #4a4a4a;
+    
+
+}
+
+    
+    
+
+
+
